# gaussian-glasses

./: .gitignore  COD_dataset.py  README.md  clip.py  clip_classifier.py  clip_eval.py  dataset.py  ddpo.py  eval_corruption_classifier.py  eval_rl.py  img2img.py  lcm.py  pyproject.toml  requirements.txt  reward.py  rl_trainer.py  text2img.py
blog/: index.html
data/: COD_dataset.py  README.md
datasets/: README.md
docs/: index.html
exploration/: clip.py  clip_classifer.py  img2img.py  lcm.py  text2img.py
rl/: corruption_datasets.py  ddpo.py  eval_rl.py  rl_trainer.py  utils.py
sft/: eval_sft.py  sft_trainer.py
weights/driven-violet-95/epoch438/: lora.safetensors
weights/driven-violet-95/epoch500/: lora.safetensors
weights/robust-totem-89/epoch224/: lora.safetensors
weights/sft/no_prompt_epoch_30/: lora.safetensors
weights/sft/oracle_prompt_epoch_20/: lora.safetensors
