[project]
name = "diffusion-lens"
version = "0.1.0"
description = "Making hidden objects classifier-legible through diffusion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "diffusers>=0.35.2",
    "imageddpo>=0.1.0",
    "lpips>=0.1.4",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "trl~=0.21.0",
    "wandb>=0.23.1",
]

# Custom CUDA torch installation
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
